@@ -237,6 +237,13 @@ Details    : qunit size will be changed when quota limitation is too low/high;
              this patch is landed. This bug also contains 14526, 14299, 14601
              and 13794, which are found and landed during v1_4_12.
 
+Severity   : normal
+Bugzilla   : 14225
+Description: LDLM_ENQUEUE races with LDLM_CP_CALLBACK
+Details    : ldlm_completion_ast() assumes that a lock is granted when the req
+	     mode is equal to the granted mode. However, it should also check
+	     that LDLM_FL_CP_REQD is not set.
+
 --------------------------------------------------------------------------------
 
 2007-12-07         Cluster File Systems, Inc. <info@clusterfs.com>
